fix(theme): fix layout issue when navbar is disabled

--- a/packages/theme/src/client/modules/blog/styles/layout.scss
+++ b/packages/theme/src/client/modules/blog/styles/layout.scss
@@ -6,7 +6,6 @@
 
     box-sizing: border-box;
 
-    padding-top: var(--navbar-height);
     padding-bottom: 2rem;
 
     background: var(--bg-color-back);
